--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -81,6 +81,8 @@
         "Averett University",
         "Babson College",
         "Bard College",
+        "Baylor University",
+        "Bellarmine University",
         "Bethany College (WV)",
         "SUNY Binghamton",
         "Boston College",
@@ -89,6 +91,7 @@
         "Butler University",
         "California Polytechnic State University",
         "California State University, Fresno",
+        "Campbell University",
         "Canisius College",
         "Carnegie Mellon University",
         "Carroll University (WI)",
@@ -99,6 +102,7 @@
         "Colby Community College",
         "College of Charleston (SC)",
         "Colorado College",
+        "Columbia University",
         "Eastern Connecticut State University",
         "Connecticut College",
         "Creighton University",
@@ -108,7 +112,9 @@
         "Drew University",
         "Duke University",
         "Earlham College",
+        "East Carolina University",
         "Eastern Kentucky University",
+        "Eastern Nazarene College",
         "Eastern University",
         "Eastern Washington University",
         "Edward Waters University",
@@ -124,6 +130,7 @@
         "Florida Atlantic University",
         "Florida Institute of Technology",
         "Florida International University",
+        "Florida Southern College",
         "Florida State University",
         "Franklin & Marshall College",
         "Furman University",
@@ -135,12 +142,15 @@
         "Graceland University",
         "Grand Canyon University",
         "Greensboro College",
+        "Hillsdale College",
         "High Point University",
         "Hollins University",
         "Holy Family University",
+        "Howard University",
         "Illinois College",
         "Indian River State College",
         "Indiana University, Bloomington",
+        "Indiana University of Pennsylvania",
         "Iowa State University",
         "Ithaca College",
         "Johns Hopkins University",
@@ -149,6 +159,7 @@
         "King University",
         "Lehigh University",
         "Liberty University",
+        "Limestone University",
         "Lincoln Memorial University",
         "Lindsey Wilson College",
         "Lock Haven University of Pennsylvania",
@@ -158,6 +169,7 @@
         "Marist College",
         "Lynn University",
         "Macalester College",
+        "Marian University (IN)",
         "Marquette University",
         "Louisiana State University",
         "Marshall University",
@@ -169,6 +181,7 @@
         "Missouri University of Science and Technology",
         "Mitchell College",
         "Monmouth College (IL)",
+        "Montana State University, Bozeman",
         "University of Moravian",
         "Morehead State University",
         "Morgan State University",
@@ -185,6 +198,7 @@
         "Point Loma Nazarene University",
         "Presbyterian College",
         "Quincy University",
+        "Rider University",
         "Roosevelt University",
         "Rowan University",
         "St. Ambrose University",
@@ -203,14 +217,17 @@
         "Southern Methodist University",
         "Spring Hill College",
         "Springfield College",
+        "St. Lawrence University",
         "St. Johns River State College",
         "St. Mary's College of Maryland",
         "##Stanton University",
         "Morrisville State College",
         "SUNY Oswego",
+        "Stetson University",
         "Stevens Institute of Technology",
         "Stonehill College",
         "Stony Brook University",
+        "University at Buffalo",
         "Swarthmore College",
         "Texas Christian University",
         "Texas Tech University",
@@ -222,8 +239,10 @@
         "Tufts University",
         "Union College (NY)",
         "University of Akron",
+        "United States Merchant Marine Academy",
         "University of Alabama",
         "University of Alabama at Birmingham",
+        "University of Arizona",
         "University of Arkansas, Little Rock",
         "University of California, Davis",
         "University of California, Los Angeles",
@@ -232,6 +251,7 @@
         "University of Connecticut",
         "University of Florida",
         "University of Georgia",
+        "University of Idaho",
         "University of Iowa",
         "University of Louisiana at Monroe",
         "University of Maryland, College Park",
@@ -243,6 +263,7 @@
         "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of New Haven",
+        "University of South Carolina, Columbia",
         "University of South Carolina-Sumter",
         "University of South Carolina Upstate",
         "University of St. Thomas (MN)",
@@ -252,7 +273,9 @@
         "University of West Alabama",
         "University of Wisconsin, Parkside",
         "University at Albany",
+        "University of Central Arkansas",
         "University of Central Florida",
+        "University of Dayton",
         "University of Houston",
         "University of Mary Washington",
         "University of Memphis",
