--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -76,6 +76,7 @@
         "Appalachian State University",
         "Arkansas State University",
         "Assumption College",
+        "Auburn University",
         "Aurora University",
         "Austin Peay State University",
         "Averett University",
@@ -117,6 +118,7 @@
         "Eastern Nazarene College",
         "Eastern University",
         "Eastern Washington University",
+        "Eckerd College",
         "Edward Waters University",
         "Elmhurst University",
         "Elmira College",
@@ -136,6 +138,7 @@
         "Furman University",
         "Garden City Community College",
         "Gardner-Webb University",
+        "Georgetown College",
         "Georgia Southern University",
         "Georgia Institute of Technology",
         "Goucher College",
@@ -154,6 +157,7 @@
         "Iowa State University",
         "Ithaca College",
         "Johns Hopkins University",
+        "Kennesaw State University",
         "Lakeland University (WI)",
         "Lamar University",
         "King University",
@@ -195,6 +199,7 @@
         "North Park University",
         "Nova Southeastern University",
         "Pennsylvania State University",
+        "Pepperdine University",
         "Point Loma Nazarene University",
         "Presbyterian College",
         "Quincy University",
@@ -263,6 +268,7 @@
         "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of New Haven",
+        "University of North Carolina at Charlotte",
         "University of South Carolina, Columbia",
         "University of South Carolina-Sumter",
         "University of South Carolina Upstate",
@@ -271,6 +277,7 @@
         "University of the Cumberlands",
         "University of Washington",
         "University of West Alabama",
+        "University of Wisconsin, Madison",
         "University of Wisconsin, Parkside",
         "University at Albany",
         "University of Central Arkansas",
