--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -128,6 +128,7 @@
         "Emmanuel College (GA)",
         "Emmanuel College (MA)",
         "Endicott College",
+        "Erskine College",
         "Flagler College",
         "Florida Atlantic University",
         "Florida Institute of Technology",
@@ -166,6 +167,7 @@
         "Limestone University",
         "Lincoln Memorial University",
         "Lindsey Wilson College",
+        "Lipscomb University",
         "Lock Haven University of Pennsylvania",
         "Long Island University",
         "Loras College",
@@ -197,7 +199,9 @@
         "North Carolina State University",
         "North Carolina Wesleyan College",
         "North Park University",
+        "Northern Illinois University",
         "Nova Southeastern University",
+        "Oregon State University",
         "Pennsylvania State University",
         "Pepperdine University",
         "Point Loma Nazarene University",
@@ -206,6 +210,7 @@
         "Rider University",
         "Roosevelt University",
         "Rowan University",
+        "Rutgers University, Camden",
         "St. Ambrose University",
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
@@ -225,6 +230,7 @@
         "St. Lawrence University",
         "St. Johns River State College",
         "St. Mary's College of Maryland",
+        "Stanford University",
         "##Stanton University",
         "Morrisville State College",
         "SUNY Oswego",
@@ -254,6 +260,7 @@
         "University of California, Santa Barbara",
         "University of Colorado, Boulder",
         "University of Connecticut",
+        "University of Delaware",
         "University of Florida",
         "University of Georgia",
         "University of Idaho",
@@ -275,6 +282,7 @@
         "University of St. Thomas (MN)",
         "University of Tampa",
         "University of the Cumberlands",
+        "University of the Pacific",
         "University of Washington",
         "University of West Alabama",
         "University of Wisconsin, Madison",
@@ -288,8 +296,10 @@
         "University of Memphis",
         "University of Miami (FL)",
         "University of New Hampshire",
+        "University of North Carolina, Chapel Hill",
         "University of North Florida",
         "University of Notre Dame",
+        "University of Oklahoma",
         "University of South Florida",
         "University of Texas at Austin",
         "Sewanee, The University of the South",
