--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -79,10 +79,12 @@
         "Auburn University",
         "Aurora University",
         "Austin Peay State University",
+        "Ave Maria University",
         "Averett University",
         "Babson College",
         "Bard College",
         "Baylor University",
+        "Belhaven University",
         "Bellarmine University",
         "Bethany College (WV)",
         "SUNY Binghamton",
@@ -92,16 +94,19 @@
         "Butler University",
         "California Polytechnic State University",
         "California State University, Fresno",
+        "California State University - Long Beach",
         "Campbell University",
         "Canisius College",
         "Carnegie Mellon University",
         "Carroll University (WI)",
         "Castleton University",
+        "Cedar Crest College",
         "Clackamas Community College",
         "Clarkson University",
         "Coker University",
         "Colby Community College",
         "College of Charleston (SC)",
+        "College of the Holy Cross",
         "Colorado College",
         "Columbia University",
         "Eastern Connecticut State University",
@@ -110,6 +115,7 @@
         "Daemen College",
         "Dallas Baptist University",
         "Dartmouth College",
+        "Dominican University of California",
         "Drew University",
         "Duke University",
         "Earlham College",
@@ -138,6 +144,7 @@
         "Franklin & Marshall College",
         "Furman University",
         "Garden City Community College",
+        "George Mason University",
         "Gardner-Webb University",
         "Georgetown College",
         "Georgia Southern University",
@@ -152,12 +159,14 @@
         "Holy Family University",
         "Howard University",
         "Illinois College",
+        "Illinois Institute of Technology",
         "Indian River State College",
         "Indiana University, Bloomington",
         "Indiana University of Pennsylvania",
         "Iowa State University",
         "Ithaca College",
         "Johns Hopkins University",
+        "Juniata College",
         "Kennesaw State University",
         "Lakeland University (WI)",
         "Lamar University",
@@ -172,6 +181,7 @@
         "Long Island University",
         "Loras College",
         "Lourdes University",
+        "Loyola Marymount University",
         "Marist College",
         "Lynn University",
         "Macalester College",
@@ -186,6 +196,7 @@
         "Mississippi State University",
         "Missouri University of Science and Technology",
         "Mitchell College",
+        "Molloy College",
         "Monmouth College (IL)",
         "Montana State University, Bozeman",
         "University of Moravian",
@@ -198,15 +209,19 @@
         "North Carolina A&T State University",
         "North Carolina State University",
         "North Carolina Wesleyan College",
+        "North Dakota State University",
         "North Park University",
         "Northern Illinois University",
         "Nova Southeastern University",
+        "Ohio Northern University",
+        "Ohio State University",
         "Oregon State University",
         "Pennsylvania State University",
         "Pepperdine University",
         "Point Loma Nazarene University",
         "Presbyterian College",
         "Quincy University",
+        "Rice University",
         "Rider University",
         "Roosevelt University",
         "Rowan University",
@@ -215,6 +230,7 @@
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
         "Salve Regina University",
+        "Samford University",
         "San Jose State University",
         "Santa Clara University",
         "Sarah Lawrence College",
@@ -239,12 +255,16 @@
         "Stonehill College",
         "Stony Brook University",
         "University at Buffalo",
+        "Susquehanna University",
         "Swarthmore College",
+        "Tarleton State University",
         "Texas Christian University",
         "Texas Tech University",
         "The Citadel",
         "University of Tennessee, Knoxville",
         "Towson University",
+        "Trevecca Nazarene University",
+        "Trine University",
         "Trinity College (CT)",
         "Truett-McConnell College",
         "Tufts University",
@@ -265,20 +285,25 @@
         "University of Georgia",
         "University of Idaho",
         "University of Iowa",
+        "University of Kentucky",
         "University of Louisiana at Monroe",
         "University of Maryland, College Park",
         "University of Massachusetts, Boston",
         "University of Massachusetts, Dartmouth",
         "University of Michigan",
+        "University of Mississippi",
         "University of Missouri, Columbia",
         "University of Nebraska, Lincoln",
         "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of New Haven",
         "University of North Carolina at Charlotte",
+        "University of South Carolina Aiken",
         "University of South Carolina, Columbia",
         "University of South Carolina-Sumter",
         "University of South Carolina Upstate",
+        "University of Southern California",
+        "University of Southern Mississippi",
         "University of St. Thomas (MN)",
         "University of Tampa",
         "University of the Cumberlands",
@@ -296,17 +321,21 @@
         "University of Memphis",
         "University of Miami (FL)",
         "University of New Hampshire",
+        "University of North Alabama",
         "University of North Carolina, Chapel Hill",
         "University of North Florida",
         "University of Notre Dame",
         "University of Oklahoma",
+        "University of Rhode Island",
         "University of South Florida",
         "University of Texas at Austin",
         "Sewanee, The University of the South",
         "University of Virginia",
         "University of West Georgia",
         "Vanderbilt University",
+        "Villanova University",
         "University of Wisconsin, Eau Claire",
+        "Utah State University",
         "Virginia Commonwealth University",
         "Virginia Polytechnic Institute & State University",
         "Wake Forest University",
@@ -316,9 +345,15 @@
         "Webber International University",
         "Wells College",
         "Wesleyan University (CT)",
+        "West Virginia University",
+        "Western Carolina University",
         "Western Colorado University",
+        "Western Kentucky University",
         "Western Michigan University",
         "Wheaton College (IL)",
+        "Widener University",
+        "William Paterson University of New Jersey",
+        "Wingate University",
         "Winthrop University",
         "Wisconsin Lutheran College",
         "Worcester Polytechnic Institute",
