--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -77,6 +77,7 @@
         "Arkansas State University",
         "Assumption College",
         "Auburn University",
+        "Augustana College (IL)",
         "Aurora University",
         "Austin Peay State University",
         "Ave Maria University",
@@ -89,6 +90,7 @@
         "Bethany College (WV)",
         "SUNY Binghamton",
         "Boston College",
+        "Bowdoin College",
         "Bradley University",
         "Bryn Mawr College",
         "Butler University",
@@ -101,25 +103,32 @@
         "Carroll University (WI)",
         "Castleton University",
         "Cedar Crest College",
+        "Central Michigan University",
+        "Centre College",
         "Clackamas Community College",
         "Clarkson University",
+        "Coastal Carolina University",
         "Coker University",
         "Colby Community College",
         "College of Charleston (SC)",
         "College of the Holy Cross",
         "Colorado College",
+        "Colorado State University",
         "Columbia University",
         "Eastern Connecticut State University",
         "Connecticut College",
         "Creighton University",
+        "D'Youville College",
         "Daemen College",
         "Dallas Baptist University",
         "Dartmouth College",
+        "DeSales University",
         "Dominican University of California",
         "Drew University",
         "Duke University",
         "Earlham College",
         "East Carolina University",
+        "East Tennessee State University",
         "Eastern Kentucky University",
         "Eastern Nazarene College",
         "Eastern University",
@@ -153,6 +162,7 @@
         "Graceland University",
         "Grand Canyon University",
         "Greensboro College",
+        "Hendrix College",
         "Hillsdale College",
         "High Point University",
         "Hollins University",
@@ -171,6 +181,7 @@
         "Lakeland University (WI)",
         "Lamar University",
         "King University",
+        "Lafayette College",
         "Lehigh University",
         "Liberty University",
         "Limestone University",
@@ -182,6 +193,7 @@
         "Loras College",
         "Lourdes University",
         "Loyola Marymount University",
+        "Loyola University Chicago",
         "Marist College",
         "Lynn University",
         "Macalester College",
@@ -191,6 +203,7 @@
         "Marshall University",
         "Massachusetts College of Liberal Arts",
         "McKendree University",
+        "Methodist University",
         "Miami University (OH)",
         "Michigan State University",
         "Mississippi State University",
@@ -203,6 +216,7 @@
         "Morehead State University",
         "Morgan State University",
         "Mount Holyoke College",
+        "Muhlenberg College",
         "United States Naval Academy",
         "New Mexico State University",
         "Neumann University",
@@ -212,24 +226,29 @@
         "North Dakota State University",
         "North Park University",
         "Northern Illinois University",
+        "Northern Michigan University",
         "Nova Southeastern University",
         "Ohio Northern University",
         "Ohio State University",
+        "Old Dominion University",
         "Oregon State University",
         "Pennsylvania State University",
         "Pepperdine University",
         "Point Loma Nazarene University",
         "Presbyterian College",
         "Quincy University",
+        "Ranger College",
         "Rice University",
         "Rider University",
         "Roosevelt University",
         "Rowan University",
         "Rutgers University, Camden",
+        "Sacred Heart University",
         "St. Ambrose University",
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
         "Salve Regina University",
+        "Sam Houston State University",
         "Samford University",
         "San Jose State University",
         "Santa Clara University",
@@ -268,8 +287,10 @@
         "Trinity College (CT)",
         "Truett-McConnell College",
         "Tufts University",
+        "Tulane University",
         "Union College (NY)",
         "University of Akron",
+        "#United States Sports Acad.",
         "United States Merchant Marine Academy",
         "University of Alabama",
         "University of Alabama at Birmingham",
@@ -292,12 +313,14 @@
         "University of Massachusetts, Dartmouth",
         "University of Michigan",
         "University of Mississippi",
+        "University of Montevallo",
         "University of Missouri, Columbia",
         "University of Nebraska, Lincoln",
         "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of New Haven",
         "University of North Carolina at Charlotte",
+        "University of North Carolina, Greensboro",
         "University of South Carolina Aiken",
         "University of South Carolina, Columbia",
         "University of South Carolina-Sumter",
@@ -326,6 +349,7 @@
         "University of North Florida",
         "University of Notre Dame",
         "University of Oklahoma",
+        "University of Pittsburgh",
         "University of Rhode Island",
         "University of South Florida",
         "University of Texas at Austin",
