--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -72,9 +72,15 @@
         "Alice Lloyd College",
         "Allegheny College",
         "Alverno College",
+        "American University",
         "Amherst College",
+        "Anderson University (SC)",
+        "Angelo State University",
         "Appalachian State University",
+        "Arcadia University",
+        "Arizona State University",
         "Arkansas State University",
+        "#Army",
         "Assumption College",
         "Auburn University",
         "Augustana College (IL)",
@@ -91,7 +97,9 @@
         "SUNY Binghamton",
         "Boston College",
         "Bowdoin College",
+        "Bowling Green State University",
         "Bradley University",
+        "Brown University",
         "Bryn Mawr College",
         "Butler University",
         "California Polytechnic State University",
@@ -102,6 +110,8 @@
         "Carnegie Mellon University",
         "Carroll University (WI)",
         "Castleton University",
+        "Catawba College",
+        "Catholic University",
         "Cedar Crest College",
         "Central Michigan University",
         "Centre College",
@@ -154,6 +164,7 @@
         "Furman University",
         "Garden City Community College",
         "George Mason University",
+        "George Washington University",
         "Gardner-Webb University",
         "Georgetown College",
         "Georgia Southern University",
@@ -162,21 +173,28 @@
         "Graceland University",
         "Grand Canyon University",
         "Greensboro College",
+        "Harvard University",
         "Hendrix College",
+        "High Point University",
         "Hillsdale College",
         "High Point University",
         "Hollins University",
         "Holy Family University",
         "Howard University",
+        "Huntingdon College",
         "Illinois College",
         "Illinois Institute of Technology",
+        "Illinois State University",
         "Indian River State College",
+        "Indiana State University",
         "Indiana University, Bloomington",
         "Indiana University of Pennsylvania",
         "Iowa State University",
         "Ithaca College",
+        "Jacksonville State University",
         "Johns Hopkins University",
         "Juniata College",
+        "Kansas State University",
         "Kennesaw State University",
         "Lakeland University (WI)",
         "Lamar University",
@@ -208,6 +226,7 @@
         "Michigan State University",
         "Mississippi State University",
         "Missouri University of Science and Technology",
+        "Missouri State University",
         "Mitchell College",
         "Molloy College",
         "Monmouth College (IL)",
@@ -219,6 +238,7 @@
         "Muhlenberg College",
         "United States Naval Academy",
         "New Mexico State University",
+        "Niagara University",
         "Neumann University",
         "North Carolina A&T State University",
         "North Carolina State University",
@@ -233,13 +253,18 @@
         "Old Dominion University",
         "Oregon State University",
         "Pennsylvania State University",
+        "Pensacola State College",
         "Pepperdine University",
         "Point Loma Nazarene University",
         "Presbyterian College",
+        "Purdue University",
         "Quincy University",
+        "Randolph College",
         "Ranger College",
         "Rice University",
         "Rider University",
+        "Robert Morris University (PA)",
+        "Rollins College",
         "Roosevelt University",
         "Rowan University",
         "Rutgers University, Camden",
@@ -256,10 +281,14 @@
         "Seton Hall University",
         "Siena College",
         "Skidmore College",
+        "Smith College",
         "South Carolina State University",
         "South Dakota School of Mines & Technology",
+        "Southeastern Louisiana University",
         "Southern Connecticut State University",
+        "Southern Illinois University Edwardsville",
         "Southern Methodist University",
+        "Southern Utah University",
         "Spring Hill College",
         "Springfield College",
         "St. Lawrence University",
@@ -277,6 +306,8 @@
         "Susquehanna University",
         "Swarthmore College",
         "Tarleton State University",
+        "Temple University",
+        "Texas A&M International University",
         "Texas Christian University",
         "Texas Tech University",
         "The Citadel",
@@ -289,6 +320,7 @@
         "Tufts University",
         "Tulane University",
         "Union College (NY)",
+        "Union University",
         "University of Akron",
         "#United States Sports Acad.",
         "United States Merchant Marine Academy",
@@ -296,6 +328,7 @@
         "University of Alabama at Birmingham",
         "University of Arizona",
         "University of Arkansas, Little Rock",
+        "University of California, Berkeley",
         "University of California, Davis",
         "University of California, Los Angeles",
         "University of California, Santa Barbara",
@@ -312,6 +345,7 @@
         "University of Massachusetts, Boston",
         "University of Massachusetts, Dartmouth",
         "University of Michigan",
+        "University of Minnesota, Twin Cities",
         "University of Mississippi",
         "University of Montevallo",
         "University of Missouri, Columbia",
@@ -319,8 +353,11 @@
         "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of New Haven",
+        "University of North Carolina, Asheville",
         "University of North Carolina at Charlotte",
         "University of North Carolina, Greensboro",
+        "University of St. Joseph (CT)",
+        "University of South Alabama",
         "University of South Carolina Aiken",
         "University of South Carolina, Columbia",
         "University of South Carolina-Sumter",
@@ -359,6 +396,8 @@
         "Vanderbilt University",
         "Villanova University",
         "University of Wisconsin, Eau Claire",
+        "University of Wisconsin, Stout",
+        "Ursinus College",
         "Utah State University",
         "Virginia Commonwealth University",
         "Virginia Polytechnic Institute & State University",
@@ -375,12 +414,14 @@
         "Western Kentucky University",
         "Western Michigan University",
         "Wheaton College (IL)",
+        "Wichita State University",
         "Widener University",
         "William Paterson University of New Jersey",
         "Wingate University",
         "Winthrop University",
         "Wisconsin Lutheran College",
         "Worcester Polytechnic Institute",
+        "Xavier University of Louisiana",
         "Yale University",
         "#TBD",
         "#All"
