--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -94,7 +94,9 @@
         "Belhaven University",
         "Bellarmine University",
         "Bethany College (WV)",
+        "Bethune-Cookman University",
         "SUNY Binghamton",
+        "Bluefield College",
         "Boston College",
         "Bowdoin College",
         "Bowling Green State University",
@@ -169,6 +171,7 @@
         "Georgetown College",
         "Georgia Southern University",
         "Georgia Institute of Technology",
+        "Georgian Court University",
         "Goucher College",
         "Graceland University",
         "Grand Canyon University",
@@ -248,6 +251,7 @@
         "Northern Illinois University",
         "Northern Michigan University",
         "Nova Southeastern University",
+        "Oakland University",
         "Ohio Northern University",
         "Ohio State University",
         "Old Dominion University",
@@ -291,6 +295,7 @@
         "Southern Utah University",
         "Spring Hill College",
         "Springfield College",
+        "St. Andrews University",
         "St. Lawrence University",
         "St. Johns River State College",
         "St. Mary's College of Maryland",
@@ -316,6 +321,7 @@
         "Trevecca Nazarene University",
         "Trine University",
         "Trinity College (CT)",
+        "Troy University",
         "Truett-McConnell College",
         "Tufts University",
         "Tulane University",
@@ -377,6 +383,7 @@
         "University of Central Florida",
         "University of Dayton",
         "University of Houston",
+        "University of Louisville",
         "University of Mary Washington",
         "University of Memphis",
         "University of Miami (FL)",
