--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -103,6 +103,7 @@
         "Bradley University",
         "Brown University",
         "Bryn Mawr College",
+        "Bucknell University",
         "Butler University",
         "California Polytechnic State University",
         "California State University, Fresno",
@@ -134,10 +135,12 @@
         "Daemen College",
         "Dallas Baptist University",
         "Dartmouth College",
+        "Davidson College",
         "DeSales University",
         "Dominican University of California",
         "Drew University",
         "Duke University",
+        "Duquesne University",
         "Earlham College",
         "East Carolina University",
         "East Tennessee State University",
@@ -158,6 +161,7 @@
         "Erskine College",
         "Flagler College",
         "Florida Atlantic University",
+        "Florida Gulf Coast University",
         "Florida Institute of Technology",
         "Florida International University",
         "Florida Southern College",
@@ -191,10 +195,13 @@
         "Indian River State College",
         "Indiana State University",
         "Indiana University, Bloomington",
+        "Indiana University - Purdue University Indianapolis",
         "Indiana University of Pennsylvania",
         "Iowa State University",
         "Ithaca College",
         "Jacksonville State University",
+        "Jacksonville University",
+        "James Madison University",
         "Johns Hopkins University",
         "Juniata College",
         "Kansas State University",
@@ -202,6 +209,7 @@
         "Lakeland University (WI)",
         "Lamar University",
         "King University",
+        "Kutztown University of Pennsylvania",
         "Lafayette College",
         "Lehigh University",
         "Liberty University",
@@ -241,6 +249,7 @@
         "Muhlenberg College",
         "United States Naval Academy",
         "New Mexico State University",
+        "New York University",
         "Niagara University",
         "Neumann University",
         "North Carolina A&T State University",
@@ -261,7 +270,9 @@
         "Pepperdine University",
         "Point Loma Nazarene University",
         "Presbyterian College",
+        "Principia College",
         "Purdue University",
+        "Queens University of Charlotte",
         "Quincy University",
         "Randolph College",
         "Ranger College",
@@ -296,6 +307,7 @@
         "Spring Hill College",
         "Springfield College",
         "St. Andrews University",
+        "St. John's University (NY)",
         "St. Lawrence University",
         "St. Johns River State College",
         "St. Mary's College of Maryland",
@@ -310,10 +322,12 @@
         "University at Buffalo",
         "Susquehanna University",
         "Swarthmore College",
+        "Syracuse University",
         "Tarleton State University",
         "Temple University",
         "Texas A&M International University",
         "Texas Christian University",
+        "Texas State University, San Marcos",
         "Texas Tech University",
         "The Citadel",
         "University of Tennessee, Knoxville",
@@ -359,6 +373,7 @@
         "University of Nevada, Las Vegas",
         "University of Nevada",
         "University of New Haven",
+        "University of North Carolina, Wilmington",
         "University of North Carolina, Asheville",
         "University of North Carolina at Charlotte",
         "University of North Carolina, Greensboro",
@@ -369,6 +384,7 @@
         "University of South Carolina-Sumter",
         "University of South Carolina Upstate",
         "University of Southern California",
+        "University of Southern Indiana",
         "University of Southern Mississippi",
         "University of St. Thomas (MN)",
         "University of Tampa",
@@ -430,6 +446,7 @@
         "Worcester Polytechnic Institute",
         "Xavier University of Louisiana",
         "Yale University",
+        "Youngstown State University",
         "#TBD",
         "#All"
     ],
