--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -89,22 +89,27 @@
         "Ave Maria University",
         "Averett University",
         "Babson College",
+        "Ball State University",
         "Bard College",
         "Baylor University",
         "Belhaven University",
         "Bellarmine University",
+        "Belmont University",
         "Bethany College (WV)",
         "Bethune-Cookman University",
         "SUNY Binghamton",
+        "Biola University",
         "Bluefield College",
         "Boston College",
         "Bowdoin College",
         "Bowling Green State University",
         "Bradley University",
+        "Brigham Young University",
         "Brown University",
         "Bryn Mawr College",
         "Bucknell University",
         "Butler University",
+        "California Baptist University",
         "California Polytechnic State University",
         "California State University, Fresno",
         "California State University - Long Beach",
@@ -130,12 +135,15 @@
         "Columbia University",
         "Eastern Connecticut State University",
         "Connecticut College",
+        "Converse University",
+        "Cornell University",
         "Creighton University",
         "D'Youville College",
         "Daemen College",
         "Dallas Baptist University",
         "Dartmouth College",
         "Davidson College",
+        "DePaul University",
         "DeSales University",
         "Dominican University of California",
         "Drew University",
@@ -145,6 +153,7 @@
         "East Carolina University",
         "East Tennessee State University",
         "Eastern Kentucky University",
+        "Eastern Michigan University",
         "Eastern Nazarene College",
         "Eastern University",
         "Eastern Washington University",
@@ -157,9 +166,13 @@
         "Emerson College",
         "Emmanuel College (GA)",
         "Emmanuel College (MA)",
+        "Emory University",
         "Endicott College",
         "Erskine College",
+        "Fairfield University",
+        "Fisk University",
         "Flagler College",
+        "Florida A&M University",
         "Florida Atlantic University",
         "Florida Gulf Coast University",
         "Florida Institute of Technology",
@@ -167,6 +180,7 @@
         "Florida Southern College",
         "Florida State University",
         "Franklin & Marshall College",
+        "Franklin Pierce University",
         "Furman University",
         "Garden City Community College",
         "George Mason University",
@@ -174,6 +188,7 @@
         "Gardner-Webb University",
         "Georgetown College",
         "Georgia Southern University",
+        "Georgia State University",
         "Georgia Institute of Technology",
         "Georgian Court University",
         "Goucher College",
@@ -223,9 +238,11 @@
         "Lourdes University",
         "Loyola Marymount University",
         "Loyola University Chicago",
+        "Loyola University Maryland",
         "Marist College",
         "Lynn University",
         "Macalester College",
+        "Manhattanville College",
         "Marian University (IN)",
         "Marquette University",
         "Louisiana State University",
@@ -255,22 +272,28 @@
         "North Carolina A&T State University",
         "North Carolina State University",
         "North Carolina Wesleyan College",
+        "North Central College",
         "North Dakota State University",
         "North Park University",
         "Northern Illinois University",
+        "Northern Kentucky University",
         "Northern Michigan University",
+        "Northwestern University",
         "Nova Southeastern University",
         "Oakland University",
         "Ohio Northern University",
         "Ohio State University",
+        "Ohio University",
         "Old Dominion University",
         "Oregon State University",
+        "Palm Beach Atlantic University",
         "Pennsylvania State University",
         "Pensacola State College",
         "Pepperdine University",
         "Point Loma Nazarene University",
         "Presbyterian College",
         "Principia College",
+        "Purdue University",
         "Purdue University",
         "Queens University of Charlotte",
         "Quincy University",
@@ -287,9 +310,11 @@
         "St. Ambrose University",
         "Saint Francis University (PA)",
         "Saint Joseph's College (ME)",
+        "Saint Louis University",
         "Salve Regina University",
         "Sam Houston State University",
         "Samford University",
+        "San Diego State University",
         "San Jose State University",
         "Santa Clara University",
         "Sarah Lawrence College",
@@ -299,6 +324,7 @@
         "Smith College",
         "South Carolina State University",
         "South Dakota School of Mines & Technology",
+        "South Dakota State University",
         "Southeastern Louisiana University",
         "Southern Connecticut State University",
         "Southern Illinois University Edwardsville",
@@ -315,6 +341,7 @@
         "##Stanton University",
         "Morrisville State College",
         "SUNY Oswego",
+        "Stephen F. Austin State University",
         "Stetson University",
         "Stevens Institute of Technology",
         "Stonehill College",
@@ -339,6 +366,7 @@
         "Truett-McConnell College",
         "Tufts University",
         "Tulane University",
+        "United States Air Force Academy",
         "Union College (NY)",
         "Union University",
         "University of Akron",
@@ -362,6 +390,7 @@
         "University of Kentucky",
         "University of Louisiana at Monroe",
         "University of Maryland, College Park",
+        "University of Maryland Eastern Shore",
         "University of Massachusetts, Boston",
         "University of Massachusetts, Dartmouth",
         "University of Michigan",
@@ -377,30 +406,41 @@
         "University of North Carolina, Asheville",
         "University of North Carolina at Charlotte",
         "University of North Carolina, Greensboro",
+        "University of North Dakota",
+        "University of Northern Colorado",
+        "University of Northern Iowa",
+        "University of Pennsylvania",
         "University of St. Joseph (CT)",
+        "University of San Diego",
         "University of South Alabama",
         "University of South Carolina Aiken",
         "University of South Carolina, Columbia",
         "University of South Carolina-Sumter",
         "University of South Carolina Upstate",
+        "University of South Dakota",
         "University of Southern California",
         "University of Southern Indiana",
         "University of Southern Mississippi",
         "University of St. Thomas (MN)",
         "University of Tampa",
+        "University of Tennessee Southern",
         "University of the Cumberlands",
+        "University of the Incarnate Word",
         "University of the Pacific",
         "University of Washington",
         "University of West Alabama",
         "University of Wisconsin, Madison",
         "University of Wisconsin, Parkside",
+        "University of Wyoming",
         "University at Albany",
         "University of Central Arkansas",
         "University of Central Florida",
         "University of Dayton",
         "University of Houston",
+        "University of Kansas",
         "University of Louisville",
         "University of Mary Washington",
+        "University of Maryland, Baltimore County",
         "University of Memphis",
         "University of Miami (FL)",
         "University of New Hampshire",
@@ -414,11 +454,14 @@
         "University of South Florida",
         "University of Texas at Austin",
         "Sewanee, The University of the South",
+        "University of Utah",
         "University of Virginia",
         "University of West Georgia",
         "Vanderbilt University",
         "Villanova University",
         "University of Wisconsin, Eau Claire",
+        "University of Wisconsin, River Falls",
+        "Valdosta State University",
         "University of Wisconsin, Stout",
         "Ursinus College",
         "Utah State University",
@@ -439,10 +482,12 @@
         "Wheaton College (IL)",
         "Wichita State University",
         "Widener University",
+        "College of William and Mary",
         "William Paterson University of New Jersey",
         "Wingate University",
         "Winthrop University",
         "Wisconsin Lutheran College",
+        "Wofford College",
         "Worcester Polytechnic Institute",
         "Xavier University of Louisiana",
         "Yale University",
