--- a/config_aauCoaches.json
+++ b/config_aauCoaches.json
@@ -125,6 +125,7 @@
         "Centre College",
         "Clackamas Community College",
         "Clarkson University",
+        "Clemson University",
         "Coastal Carolina University",
         "Coker University",
         "Colby Community College",
@@ -204,6 +205,8 @@
         "Holy Family University",
         "Howard University",
         "Huntingdon College",
+        "Husson University",
+        "Idaho State University",
         "Illinois College",
         "Illinois Institute of Technology",
         "Illinois State University",
@@ -212,6 +215,7 @@
         "Indiana University, Bloomington",
         "Indiana University - Purdue University Indianapolis",
         "Indiana University of Pennsylvania",
+        "Iona University",
         "Iowa State University",
         "Ithaca College",
         "Jacksonville State University",
@@ -435,6 +439,7 @@
         "University at Albany",
         "University of Central Arkansas",
         "University of Central Florida",
+        "University of Cincinnati",
         "University of Dayton",
         "University of Houston",
         "University of Kansas",
